// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalReducer handles TOGGLE_DATEPICKER action 1`] = `
Object {
  "isVisible": false,
}
`;

exports[`ModalReducer handles TOGGLE_DATEPICKER action 2`] = `
Object {
  "isVisible": true,
}
`;

exports[`ModalReducer has default state 1`] = `
Object {
  "isVisible": false,
}
`;
